biblioteca material, ciclo vida componentes, botones

--- a/src/app/inputs/components/input/input.component.html
+++ b/src/app/inputs/components/input/input.component.html
@@ -3,6 +3,8 @@
 <input type="text" [(ngModel)]="nombre" />
 <h5>El nombre ingresado es: {{ nombre }}</h5>
 
+<button mat-raised-button color="primary" (click)="salir()">Salir del componente</button>
+
 
 
 
